<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aff02.rr.MainActivity">

    <EditText
        android:id="@+id/ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ID_hint"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name_hint"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save_btn"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Select_btn"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/text_id" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/text_name" />

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnupdate"
        android:text="@string/text_update"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnclear"
        android:text="@string/text_clear"/>


</LinearLayout>
